[package]
name        = "ec"
version.workspace = true
edition.workspace = true
description = "Elliptic curve group operations for the ecrust library"
license.workspace = true

[dependencies]
fp           = { workspace = true }
crypto-bigint = { workspace = true }

[dev-dependencies]
# Add test-only dependencies here as needed
