[package]
name        = "ec"
version.workspace = true
edition.workspace = true
description = "Elliptic curve group operations for the ecrust library"
license.workspace = true

[dependencies]
fp           = { workspace = true }
crypto-bigint = { workspace = true }
subtle = "2.6"
rand = "0.10.1"


[dev-dependencies]

# Add test-only dependencies here as needed

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]