[package]
name = "ecrust-ec"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Elliptic-curve abstractions and point arithmetic for the ecrust ecosystem."
documentation = "https://docs.rs/ecrust-ec"
readme = "README.md"

[lib]
name = "ec"
path = "src/lib.rs"

[dependencies]
fp = { workspace = true }
crypto-bigint = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
