[package]
name        = "fp"
version.workspace = true
edition.workspace = true
description = "Finite field arithmetic over Fp for the ecrust library"
license.workspace = true

[dependencies]
crypto-bigint = { workspace = true, features = ["subtle"] }
rand = "0.10.0"
subtle = "2.6"

[dev-dependencies]
# Add test-only dependencies here as needed

