[package]
name = "ecrust-fp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Finite field arithmetic over Fp for the ecrust library"

documentation.workspace = true
homepage.workspace = true
repository.workspace = true

authors.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
exclude.workspace = true

[lib]
name = "fp"
path = "src/lib.rs"

[dependencies]
crypto-bigint = { workspace = true, features = ["subtle"] }
subtle = "2.6"
rand = "0.10.1"


[dev-dependencies]
rand = "0.10.1"
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]