[package]
name = "ecrust-fp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Finite field arithmetic for the ecrust ecosystem."
documentation = "https://docs.rs/ecrust-fp"
readme = "README.md"

[lib]
name = "fp"
path = "src/lib.rs"

[dependencies]
crypto-bigint = { workspace = true, features = ["subtle"] }
subtle = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
