[package]
name        = "isogeny"
version.workspace = true
edition.workspace = true
description = "Isogeny computations for the ecrust library"
license.workspace = true

[dependencies]
fp            = { workspace = true }
ec            = { workspace = true }
crypto-bigint = { workspace = true }

[dev-dependencies]
# Add test-only dependencies here as needed
