# isogeny/Cargo.toml
[package]
name = "ecrust-isogeny"
version.workspace = true
edition.workspace = true
description = "Isogeny computations for the ecrust library"
license.workspace = true

[lib]
name = "isogeny"
path = "src/lib.rs"

[dependencies]
fp            = { workspace = true }
ec            = { workspace = true }
crypto-bigint = { workspace = true }

[dev-dependencies]
# Add test-only dependencies here as needed

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]