[package]
name = "ecrust-isogeny"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Isogeny abstractions and scaffolding for the ecrust ecosystem."
documentation = "https://docs.rs/ecrust-isogeny"
readme = "README.md"

[lib]
name = "isogeny"
path = "src/lib.rs"

[dependencies]
fp = { workspace = true }
ec = { workspace = true }
crypto-bigint = { workspace = true }
subtle = "2.6"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
