# protocol/Cargo.toml
[package]
name = "ecrust-protocol"
version.workspace = true
edition.workspace = true
description = "Cryptographic protocols built on top of the ecrust field and elliptic-curve layers"
license.workspace = true

[lib]
name = "protocol"
path = "src/lib.rs"

[dependencies]
ec = { workspace = true }
subtle = "2.6"

[dev-dependencies]
crypto-bigint = { workspace = true }
fp = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]